@@ -1,3 +1,7 @@
+Oct 04, 2007 - chris
+o record numbers are now no longer reused after they were deleted and the
+    database was reopened.
+
 Oct 03, 2007 - chris
 o rewrote some blob management routines which resulted in an improvement
     of duplicate keys.
